added babel helpers and small bug fix

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
         crossorigin="anonymous"></script>
 
+<!-- Babel Helpers -->
+<script src="build/helpers.js"></script>
+
 <!-- Datatables -->
 <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 
